new version supported

--- a/xppbe/Analysis/Excels/results.ipynb
+++ b/xppbe/Analysis/Excels/results.ipynb
@@ -7,67 +7,17 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import json\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "from results_utils import *\n",
     "\n",
     "current_directory = os.getcwd()\n",
     "path_components = current_directory.split(os.path.sep)\n",
-    "results_dir = os.path.sep.join(path_components[:-3])\n"
+    "results_dir = os.path.sep.join(path_components[:-3])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_largest_iteration(folder_path):\n",
-    "    subdirectories = [d for d in os.listdir(folder_path) if os.path.isdir(os.path.join(folder_path, d))]\n",
-    "    iteration_numbers = [int(d.split('_')[1]) for d in subdirectories if d.startswith('iter_')]\n",
-    "    if not iteration_numbers:\n",
-    "        return None\n",
-    "    largest_iteration_folder = os.path.join(folder_path, f'iter_{max(iteration_numbers)}')\n",
-    "    return largest_iteration_folder\n",
-    "\n",
-    "def find_loss_csv(folder_path):\n",
-    "    largest_iteration_folder = find_largest_iteration(os.path.join(folder_path,'iterations'))\n",
-    "    if largest_iteration_folder:\n",
-    "        loss_csv_path = os.path.join(largest_iteration_folder, 'loss.csv')\n",
-    "        if os.path.isfile(loss_csv_path):\n",
-    "            return loss_csv_path\n",
-    "    return None\n",
-    "\n",
-    "def get_last_iteration_losses(loss_csv_path):\n",
-    "    df = pd.read_csv(loss_csv_path)\n",
-    "    last_row = df.iloc[-1]\n",
-    "    losses = last_row[list(df.columns)]\n",
-    "    return losses\n",
-    "\n",
-    "def read_results_json(folder_path):\n",
-    "    results_json_path = os.path.join(folder_path, 'results_values.json')\n",
-    "    if os.path.isfile(results_json_path):\n",
-    "        with open(results_json_path, 'r') as json_file:\n",
-    "            results_data = json.load(json_file)\n",
-    "        return results_data\n",
-    "    else:\n",
-    "        return None\n",
-    "\n",
-    "def get_results_by_sim(folder_path):\n",
-    "    loss_csv_path = find_loss_csv(folder_path)\n",
-    "    if loss_csv_path:\n",
-    "        results = get_last_iteration_losses(loss_csv_path)\n",
-    "        results_data = read_results_json(folder_path)\n",
-    "        if results_data:\n",
-    "            for name in results_data:\n",
-    "                results[name] = float(results_data[name])\n",
-    "            return results\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,217 +31,32 @@
    "source": [
     "molecule = 'methanol'\n",
     "results_dir = os.path.join(results_dir,'.results',molecule)\n",
-    "print(results_dir)"
+    "print(results_dir)\n",
+    "df_filtered = create_df_excel(results_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "folders = ['']\n",
-    "data = dict()\n",
-    "for folder in folders:\n",
-    "    folder_path = os.path.join(results_dir,folder) if folder!= '' else results_dir\n",
-    "    sims = os.listdir(folder_path)\n",
-    "    for sim in sims:\n",
-    "        sim_path = os.path.join(folder_path,sim)\n",
-    "        result = get_results_by_sim(sim_path)\n",
-    "        data[sim] = result\n",
-    "\n",
-    "data_filtered = {sim: result for sim, result in data.items() if result is not None}\n",
-    "df = pd.DataFrame.from_dict(data_filtered, orient='index')\n",
-    "\n",
-    "filter_list = [\"Gsolv_value\",\n",
-    "                \"Loss_XPINN\",\n",
-    "                \"Loss_NN1\",\n",
-    "                \"Loss_NN2\",\n",
-    "                \"Loss_Val_NN1\",\n",
-    "                \"Loss_Val_NN2\",\n",
-    "                \"Loss_continuity_u\",\n",
-    "                \"Loss_continuity_du\",\n",
-    "                \"Loss_Residual_R1\",\n",
-    "                \"Loss_Residual_R2\",\n",
-    "                \"Loss_Boundary_D2\",\n",
-    "                \"Loss_Data_K2\",\n",
-    "                \"L2_analytic\"]\n",
-    "df_filtered = df.filter(filter_list)\n",
-    "\n",
-    "excel_file_path = 'results_temp.xlsx'\n",
-    "with pd.ExcelWriter(excel_file_path, engine='xlsxwriter') as writer:\n",
-    "    df.to_excel(writer, sheet_name='DF_complete', index=True)\n",
-    "    df_filtered.to_excel(writer, sheet_name='DF_Filtered', index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Gsolv_value</th>\n",
-       "      <th>Loss_XPINN</th>\n",
-       "      <th>Loss_NN1</th>\n",
-       "      <th>Loss_NN2</th>\n",
-       "      <th>Loss_Val_NN1</th>\n",
-       "      <th>Loss_Val_NN2</th>\n",
-       "      <th>Loss_continuity_u</th>\n",
-       "      <th>Loss_continuity_du</th>\n",
-       "      <th>Loss_Residual_R1</th>\n",
-       "      <th>Loss_Residual_R2</th>\n",
-       "      <th>Loss_Boundary_D2</th>\n",
-       "      <th>Loss_Data_K2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>M2</th>\n",
-       "      <td>-8.505</td>\n",
-       "      <td>0.000318</td>\n",
-       "      <td>0.000173</td>\n",
-       "      <td>0.000173</td>\n",
-       "      <td>0.000172</td>\n",
-       "      <td>0.000172</td>\n",
-       "      <td>5.308000e-06</td>\n",
-       "      <td>1.678000e-04</td>\n",
-       "      <td>1.495000e-10</td>\n",
-       "      <td>8.939000e-13</td>\n",
-       "      <td>3.072000e-08</td>\n",
-       "      <td>3.502000e-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M4</th>\n",
-       "      <td>-11.580</td>\n",
-       "      <td>0.000660</td>\n",
-       "      <td>0.000058</td>\n",
-       "      <td>0.000058</td>\n",
-       "      <td>0.000060</td>\n",
-       "      <td>0.000063</td>\n",
-       "      <td>1.430000e-08</td>\n",
-       "      <td>5.712000e-05</td>\n",
-       "      <td>9.752000e-07</td>\n",
-       "      <td>4.023000e-07</td>\n",
-       "      <td>3.662000e-09</td>\n",
-       "      <td>3.484000e-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M1</th>\n",
-       "      <td>-11.643</td>\n",
-       "      <td>0.000160</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>0.000007</td>\n",
-       "      <td>0.000015</td>\n",
-       "      <td>0.000010</td>\n",
-       "      <td>3.045000e-08</td>\n",
-       "      <td>6.966000e-06</td>\n",
-       "      <td>1.204000e-06</td>\n",
-       "      <td>1.557000e-07</td>\n",
-       "      <td>3.203000e-09</td>\n",
-       "      <td>2.522000e-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M5</th>\n",
-       "      <td>-11.909</td>\n",
-       "      <td>0.000604</td>\n",
-       "      <td>0.000287</td>\n",
-       "      <td>0.000287</td>\n",
-       "      <td>0.000304</td>\n",
-       "      <td>0.000304</td>\n",
-       "      <td>8.010000e-08</td>\n",
-       "      <td>2.871000e-04</td>\n",
-       "      <td>1.895000e-09</td>\n",
-       "      <td>2.046000e-13</td>\n",
-       "      <td>5.338000e-09</td>\n",
-       "      <td>5.795000e-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M6</th>\n",
-       "      <td>-11.580</td>\n",
-       "      <td>0.000118</td>\n",
-       "      <td>0.000010</td>\n",
-       "      <td>0.000009</td>\n",
-       "      <td>0.000010</td>\n",
-       "      <td>0.000008</td>\n",
-       "      <td>1.946000e-08</td>\n",
-       "      <td>8.663000e-06</td>\n",
-       "      <td>1.297000e-06</td>\n",
-       "      <td>8.698000e-08</td>\n",
-       "      <td>2.515000e-09</td>\n",
-       "      <td>2.369000e-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M3</th>\n",
-       "      <td>-12.080</td>\n",
-       "      <td>0.000027</td>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>0.000003</td>\n",
-       "      <td>1.643000e-07</td>\n",
-       "      <td>3.590000e-07</td>\n",
-       "      <td>5.751000e-07</td>\n",
-       "      <td>5.859000e-07</td>\n",
-       "      <td>8.318000e-08</td>\n",
-       "      <td>8.353000e-08</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    Gsolv_value  Loss_XPINN  Loss_NN1  Loss_NN2  Loss_Val_NN1  Loss_Val_NN2  \\\n",
-       "M2       -8.505    0.000318  0.000173  0.000173      0.000172      0.000172   \n",
-       "M4      -11.580    0.000660  0.000058  0.000058      0.000060      0.000063   \n",
-       "M1      -11.643    0.000160  0.000008  0.000007      0.000015      0.000010   \n",
-       "M5      -11.909    0.000604  0.000287  0.000287      0.000304      0.000304   \n",
-       "M6      -11.580    0.000118  0.000010  0.000009      0.000010      0.000008   \n",
-       "M3      -12.080    0.000027  0.000001  0.000001      0.000004      0.000003   \n",
-       "\n",
-       "    Loss_continuity_u  Loss_continuity_du  Loss_Residual_R1  Loss_Residual_R2  \\\n",
-       "M2       5.308000e-06        1.678000e-04      1.495000e-10      8.939000e-13   \n",
-       "M4       1.430000e-08        5.712000e-05      9.752000e-07      4.023000e-07   \n",
-       "M1       3.045000e-08        6.966000e-06      1.204000e-06      1.557000e-07   \n",
-       "M5       8.010000e-08        2.871000e-04      1.895000e-09      2.046000e-13   \n",
-       "M6       1.946000e-08        8.663000e-06      1.297000e-06      8.698000e-08   \n",
-       "M3       1.643000e-07        3.590000e-07      5.751000e-07      5.859000e-07   \n",
-       "\n",
-       "    Loss_Boundary_D2  Loss_Data_K2  \n",
-       "M2      3.072000e-08  3.502000e-08  \n",
-       "M4      3.662000e-09  3.484000e-09  \n",
-       "M1      3.203000e-09  2.522000e-09  \n",
-       "M5      5.338000e-09  5.795000e-09  \n",
-       "M6      2.515000e-09  2.369000e-09  \n",
-       "M3      8.318000e-08  8.353000e-08  "
+       "Index(['Gsolv_value', 'Loss_XPINN', 'Loss_NN1', 'Loss_NN2', 'Loss_Val_NN1',\n",
+       "       'Loss_Val_NN2', 'Loss_continuity_u', 'Loss_continuity_du',\n",
+       "       'Loss_Residual_R1', 'Loss_Residual_R2', 'Loss_Boundary_D2',\n",
+       "       'Loss_Data_K2'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_filtered"
+    "df_filtered.columns"
    ]
   },
   {
