--- a/xppbe/Post/Post_Template.ipynb
+++ b/xppbe/Post/Post_Template.ipynb
@@ -31,11 +31,10 @@
    "outputs": [],
    "source": [
     "from xppbe import Simulation\n",
-    "from xppbe import xppbe_path\n",
     "\n",
     "simulation_name = os.path.basename(os.getcwd())\n",
     "\n",
-    "simulation = Simulation(f'{simulation_name}.yaml', results_path=xppbe_path)\n",
+    "simulation = Simulation(f'{simulation_name}.yaml', results_path=os.getcwd())\n",
     "\n",
     "simulation.create_simulation()\n",
     "print(simulation.domain_properties)"
