--- a/xppbe/Analysis/PBJ.ipynb
+++ b/xppbe/Analysis/PBJ.ipynb
@@ -6,15 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
     "import pbj\n",
     "import xppbe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -25,50 +23,50 @@
       "\n",
       " <<INFO>> Starting NanoShaper 0.7.8\n",
       " <<INFO>> Loading atoms....\n",
-      " <<INFO>> Read 1231 atoms\n",
-      " <<INFO>> Geometric baricenter ->  0 0 0\n",
-      " <<INFO>> Grid is 79\n",
-      " <<INFO>> MAX 21.6667 21.6667 21.6667\n",
-      " <<INFO>> MIN -21.6667 -21.6667 -21.6667\n",
+      " <<INFO>> Read 27 atoms\n",
+      " <<INFO>> Geometric baricenter ->  -0.136 0.5195 0.4945\n",
+      " <<INFO>> Grid is 35\n",
+      " <<INFO>> MAX 5.34787 6.00337 5.97837\n",
+      " <<INFO>> MIN -5.61987 -4.96437 -4.98937\n",
       " <<INFO>> Perfil 90 %\n",
-      " <<INFO>> Rmaxdim 39.9394\n",
+      " <<INFO>> Rmaxdim 10.065\n",
       " <<INFO>> Allocating memory...ok!\n",
       " <<INFO>> Initialization completed\n",
       " <<INFO>> Adjusting self intersection grid \n",
-      " <<INFO>> Self intersection grid is (before) 28\n",
-      " <<INFO>> Self intersection grid is 16\n",
+      " <<INFO>> Self intersection grid is (before) 7\n",
+      " <<INFO>> Self intersection grid is 4\n",
       " <<INFO>> Allocating self intersection grid....ok!\n",
       " <<INFO>> Computing alpha shape complex....ok!\n",
-      " <<INFO>> Checking 172 probes for self intersections...ok!\n",
+      " <<INFO>> Checking 0 probes for self intersections...ok!\n",
       " <<INFO>> Surface build-up time.. 0 [s]\n",
       " <<INFO>> Probe Radius value 1.4\n",
-      " <<INFO>> Number of ses cells -> 3167\n",
-      " <<INFO>> Number of del_point cells -> 504\n",
-      " <<INFO>> Number of regular del_edge cells -> 1558\n",
-      " <<INFO>> Number of singular del_edge cells -> 1\n",
-      " <<INFO>> Number of regular del_facet cells -> 1016\n",
-      " <<INFO>> Number of singular del_facet cells -> 44\n",
+      " <<INFO>> Number of ses cells -> 117\n",
+      " <<INFO>> Number of del_point cells -> 20\n",
+      " <<INFO>> Number of regular del_edge cells -> 55\n",
+      " <<INFO>> Number of singular del_edge cells -> 0\n",
+      " <<INFO>> Number of regular del_facet cells -> 34\n",
+      " <<INFO>> Number of singular del_facet cells -> 4\n",
       " <<INFO>> Use load balancing: 1\n",
       " <<INFO>> Detected 48 logical cores\n",
-      " <<INFO>> Setting 48 threads\n",
+      " <<INFO>> Setting 35 threads\n",
       " <<INFO>> Inside id value is 5\n",
       " <<INFO>> Ray-tracing panel 0...ok!\n",
       " <<INFO>> Ray-tracing panel 1...ok!\n",
       " <<INFO>> Ray-tracing panel 2...ok!\n",
-      " <<INFO>> Ray-tracing computation time.. 1 [s]\n",
+      " <<INFO>> Ray-tracing computation time.. 0 [s]\n",
       " <<INFO>> Approximated 0 rays (0.00000 %)\n",
       " <<INFO>> Cavity detection time is 0 [s]\n",
       " <<INFO>> Assembling octrees..ok!\n",
-      " <<INFO>> Surface computation time.. 1 [s]\n",
-      " <<INFO>> Estimated volume 10869.5 [A^3]\n",
+      " <<INFO>> Surface computation time.. 0 [s]\n",
+      " <<INFO>> Estimated volume 198.271 [A^3]\n",
       " <<INFO>> Triangulating Surface...\n",
       " <<INFO>> Setting 48 threads\n",
       " <<INFO>> Generating MC vertices...ok!\n",
       " <<INFO>> MC added 0 non analytical vertices\n",
       " <<INFO>> Triangles done\n",
       " <<INFO>> MC time is 0 [s]\n",
-      " <<INFO>> Total, grid conformant, surface area is 3861.66 [A^2]\n",
-      " <<INFO>> Number of vertices 18696 number of triangles 37388\n",
+      " <<INFO>> Total, grid conformant, surface area is 197.24 [A^2]\n",
+      " <<INFO>> Number of vertices 2874 number of triangles 5744\n",
       " <<INFO>> Saving in MSMS format, no patch info, no nearest atom..\n",
       " <<INFO>> Smoothing surface...\n",
       " <<INFO>> Saving in MSMS format, no patch info, no nearest atom..ok!\n",
@@ -83,7 +81,7 @@
     }
    ],
    "source": [
-    "mol_object = pbj.Solute(xppbe.Molecules.ubq_pqr, mesh_density=5, mesh_generator='nanoshaper', save_mesh_build_files=False)\n",
+    "mol_object = pbj.Solute(xppbe.Molecules.arg_pqr, mesh_density=15, mesh_generator='nanoshaper', save_mesh_build_files=False)\n",
     "simulation = pbj.Simulation()\n",
     "simulation.add_solute(mol_object)\n",
     "\n",
@@ -94,40 +92,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/martinachondo/.local/lib/python3.9/site-packages/numba/np/ufunc/parallel.py:371: NumbaWarning: The TBB threading layer requires TBB version 2021 update 6 or later i.e., TBB_INTERFACE_VERSION >= 12060. Found TBB_INTERFACE_VERSION = 12050. The TBB threading layer is disabled.\n",
-      "  warnings.warn(problem)\n",
       "/home/martinachondo/miniconda3/envs/pbj/lib/python3.9/site-packages/pyopencl/__init__.py:270: CompilerWarning: Non-empty compiler output encountered. Set the environment variable PYOPENCL_COMPILER_OUTPUT=1 to see more.\n",
-      "  warn(\"Non-empty compiler output encountered. Set the \"\n"
+      "  warn(\"Non-empty compiler output encountered. Set the \"\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-133.42518978150224"
+       "-130.55896438499695"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "simulation.calculate_solvation_energy()\n",
-    "simulation.solutes[0].results['solvation_energy']"
+    "simulation.solutes[0].results['electrostatic_solvation_energy']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-674.97"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "-674.97"
    ]
@@ -147,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "-577.97"
+    "densidad de 5: -577.97"
    ]
   },
   {
@@ -155,7 +172,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "densidad de 6: -573"
+   ]
   },
   {
    "cell_type": "code",
@@ -183,15 +202,6 @@
     "current_backend = bempp.core\n",
     "\n",
     "print(\"Current backend:\", current_backend)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bempp.core."
    ]
   }
  ],
