--- a/xppbe/Post/Post_Template.ipynb
+++ b/xppbe/Post/Post_Template.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.rcParams['figure.dpi'] = 150"
    ]
   },
   {
@@ -80,7 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Post.plot_G_solv_history(known=True, method='PBJ');"
+    "Post.plot_loss_history(domain=1);\n",
+    "Post.plot_loss_history(domain=2)"
    ]
   },
   {
@@ -89,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Post.plot_phi_line_aprox_known('PBJ', value='react', theta=0, phi=np.pi/2, N=600);"
+    "Post.plot_phi_contour(N=100, x0=np.array([0,0,0]), n=np.array([1,0,0]), value='phi');"
    ]
   },
   {
@@ -98,7 +101,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Post.plot_phi_line_aprox_known('PBJ', value='react', theta=np.pi/2, N=400);"
+    "Post.plot_interface_3D(value='react',jupyter=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparison known method"
    ]
   },
   {
@@ -107,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Post.plot_phi_line_aprox_known('PBJ', value='react', theta=np.pi/2, phi=np.pi, N=300);"
+    "method = 'PBJ'"
    ]
   },
   {
@@ -116,7 +126,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Post.plot_interface_3D(jupyter=True);"
+    "Post.plot_G_solv_history(known=True, method=method);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Post.plot_phi_line_aprox_known(method, value='react', theta=0, phi=np.pi/2, N=300);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Post.plot_phi_line_aprox_known(method, value='react', theta=np.pi/2, phi=np.pi/2, N=300);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Post.plot_phi_line_aprox_known(method, value='react', theta=np.pi/2, phi=np.pi, N=300);"
    ]
   },
   {
@@ -127,8 +164,22 @@
    "source": [
     "vertices = Post.mesh.mol_verts.astype(np.float32)\n",
     "elements = Post.mesh.mol_faces.astype(np.float32)\n",
-    "phi_known = Post.phi_known('APBS','phi', vertices,'')\n",
+    "phi_known = Post.phi_known(method,'react', vertices,'solvent')\n",
     "Post.plot_interface_3D_known(phi_known, vertices, elements, jupyter=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phi_known = Post.phi_known(method,'react', vertices, flag='solvent')\n",
+    "phi_xpinn = Post.get_phi(vertices,flag='molecule',model=Post.model,value='react')\n",
+    "\n",
+    "error = np.abs((phi_xpinn.numpy() - phi_known.numpy().reshape(-1,1))/phi_known.numpy().reshape(-1,1))\n",
+    "\n",
+    "Post.plot_interface_error(error, vertices, elements, scale='log', jupyter=True);"
    ]
   }
  ],
