--- a/xppbe/Post/Post_Template.ipynb
+++ b/xppbe/Post/Post_Template.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Post.plot_G_solv_history(known=True, method=method);"
+    "Post.plot_G_solv_history(method);"
    ]
   },
   {
@@ -154,32 +154,6 @@
    "outputs": [],
    "source": [
     "Post.plot_phi_line_aprox_known(method, value='react', theta=np.pi/2, phi=np.pi, N=300);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vertices = Post.mesh.mol_verts.astype(np.float32)\n",
-    "elements = Post.mesh.mol_faces.astype(np.float32)\n",
-    "phi_known = Post.phi_known(method,'react', vertices,'solvent')\n",
-    "Post.plot_interface_3D_known(phi_known, vertices, elements, jupyter=True);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phi_known = Post.phi_known(method,'react', vertices, flag='solvent')\n",
-    "phi_xpinn = Post.get_phi(vertices,flag='molecule',model=Post.model,value='react')\n",
-    "\n",
-    "error = np.abs((phi_xpinn.numpy() - phi_known.numpy().reshape(-1,1))/phi_known.numpy().reshape(-1,1))\n",
-    "\n",
-    "Post.plot_interface_error(error, vertices, elements, scale='log', jupyter=True);"
    ]
   }
  ],
