--- a/xppbe/Post/Post_Template.ipynb
+++ b/xppbe/Post/Post_Template.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "simulation_name = os.path.basename(os.getcwd())\n",
     "\n",
-    "simulation = Simulation(f'{simulation_name}.yaml', results_path=os.getcwd())\n",
+    "simulation = Simulation(f'{simulation_name}.yaml', results_path=os.getcwd(), molecule_dir=None)\n",
     "\n",
     "simulation.create_simulation()\n",
     "print(simulation.domain_properties)"
