--- a/xppbe/Post/Post_Template.ipynb
+++ b/xppbe/Post/Post_Template.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Iter = 20000\n",
+    "Iter = 'last'\n",
     "simulation.load_model_for_Post(Iter, save=False)\n",
     "Post = simulation.Post"
    ]
