--- a/xppbe/Post/Post_Template.ipynb
+++ b/xppbe/Post/Post_Template.ipynb
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "Post.plot_loss_history(domain=1);\n",
-    "Post.plot_loss_history(domain=2)"
+    "Post.plot_loss_history(domain=2);"
    ]
   },
   {
