--- a/notebooks/analysis/Known_Dataset.ipynb
+++ b/notebooks/analysis/Known_Dataset.ipynb
@@ -20,12 +20,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting StridedSlice cause Input \"input\" of op 'StridedSlice' expected to be not loop invariant.\n",
+      "WARNING:tensorflow:Using a while_loop for converting Where cause there is no registered converter for this op.\n",
+      "WARNING:tensorflow:Using a while_loop for converting StridedSlice cause Input \"input\" of op 'StridedSlice' expected to be not loop invariant.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting Where cause there is no registered converter for this op.\n",
+      "WARNING:tensorflow:Using a while_loop for converting StridedSlice cause Input \"input\" of op 'StridedSlice' expected to be not loop invariant.\n",
+      "WARNING:tensorflow:Using a while_loop for converting StridedSlice cause Input \"input\" of op 'StridedSlice' expected to be not loop invariant.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "molecule = 'arg'\n",
+    "molecule = 'sphere_+1_D'\n",
     "\n",
     "\n",
     "Rs = {'born_ion': 1,\n",
@@ -57,9 +76,37 @@
     "for key in Model.domain_properties:\n",
     "      setattr(Model, key, Model.domain_properties[key])\n",
     "\n",
+    "Model.DTYPE = 'float32'\n",
+    "Model.adim = 'kb_T_qe' #'qe_eps0_angs'\n",
+    "class Mesh:\n",
+    "      pass\n",
+    "mesh = Mesh()\n",
+    "mesh.G_sigma = 1\n",
+    "Model.mesh = mesh\n",
+    "Model.fields = ['react','phi']\n",
+    "PBE.calculate_properties(Model,Model.domain_properties)\n",
+    "PBE.get_charges(Model)\n",
     "\n",
-    "PBE.get_charges(Model)\n"
+    "Model.equation = 'linear'\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6.021156244466218"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
