--- a/notebooks/analysis/PBJ.ipynb
+++ b/notebooks/analysis/PBJ.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.environ['CUDA_VISIBLE_DEVICES']=\"-1\"\n",
+    "\n",
     "import pbj\n",
     "import xppbe"
    ]
@@ -19,55 +22,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/martinachondo/.local/lib/python3.9/site-packages/pbj/mesh/ExternalSoftware/MSMS/msms -if /home/martinachondo/XPBE/notebooks/analysis/mesh_temp/arg.xyzr -of /home/martinachondo/XPBE/notebooks/analysis/mesh_temp/arg -p 1.4 -d 4.0 -no_header\n",
-      "MSMS 2.6.1 started on Tulio\n",
-      "Copyright M.F. Sanner (1994)\n",
-      "Compilation flags -O2 -DVERBOSE -DTIMING\n",
-      "INPUT  /home/martinachondo/XPBE/notebooks/analysis/mesh_temp/arg.xyzr 27 spheres 0 collision only, radii  0.600 to  1.908\n",
-      "PARAM  Probe_radius  1.400 density  4.000 hdensity  3.000\n",
-      "REDUCED SURFACE ...\n",
-      "    RS component 0 identified 13 14 12\n",
-      "    0 free edge(s) found in component 0\n",
-      "    RS component  #faces  #edges #free_edges  #vertices   genus\n",
-      "         0          42       63          0         20      1.5\n",
-      "    Time Reduced Surface real: 0.00 user: 0.00 sys: 0.00\n",
-      "ANALYTICAL SOLVENT EXCLUDED SURFACE...\n",
-      "    Component   0\n",
-      "        Time Surface real: 0.00 user: 0.00 sys: 0.00\n",
-      "        Time Singularities real: 0.00 user: 0.00 sys: 0.00\n",
-      "    SES comp.  #fac.  #edg. #s_edg. #vert. #s_vert. R_h C_h genus\n",
-      "         0      128    252      0     126        0   0   0    0\n",
-      "ANALYTICAL SURFACE AREA :\n",
-      "    Comp. probe_radius,   reent,    toric,   contact    SES       SAS\n",
-      "      0       1.400      17.975    74.593   105.479   198.047   383.835\n",
-      "TRIANGULATION...\n",
-      "    Component 0\n",
-      "    component#, vertices,  edges,  faces, genus, density\n",
-      "        0            661    1977    1318    0     3.338\n",
-      "        Time Triangulation real: 0.00 user: 0.00 sys: 0.00\n",
-      "NUMERICAL VOLUMES AND AREA\n",
-      "    Comp. probe_radius SES_volume SES_area)\n",
-      "       0      1.40      194.916    194.208\n",
-      "    Total ses_volume:   194.916\n",
-      "MSMS terminated normally\n",
-      "Total Time real: 0.00 user: 0.00 sys: 0.00\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: atoms 23 is completely inside atom 21\n",
-      "WARNING: atoms 22 is completely inside atom 21\n",
-      "WARNING: atoms 6 is completely inside atom 5\n",
-      "WARNING: atoms 19 is completely inside atom 18\n",
-      "WARNING: atoms 26 is completely inside atom 24\n",
-      "WARNING: atoms 25 is completely inside atom 24\n"
+      "\n",
+      "\n",
+      " <<INFO>> Starting NanoShaper 0.7.8\n",
+      " <<INFO>> Loading atoms....\n",
+      " <<INFO>> Read 855 atoms\n",
+      " <<INFO>> Geometric baricenter ->  0 0 0\n",
+      " <<INFO>> Grid is 85\n",
+      " <<INFO>> MAX 20 20 20\n",
+      " <<INFO>> MIN -20 -20 -20\n",
+      " <<INFO>> Perfil 90 %\n",
+      " <<INFO>> Rmaxdim 36.355\n",
+      " <<INFO>> Allocating memory...ok!\n",
+      " <<INFO>> Initialization completed\n",
+      " <<INFO>> Adjusting self intersection grid \n",
+      " <<INFO>> Self intersection grid is (before) 25\n",
+      " <<INFO>> Self intersection grid is 16\n",
+      " <<INFO>> Allocating self intersection grid....ok!\n",
+      " <<INFO>> Computing alpha shape complex....ok!\n",
+      " <<INFO>> Checking 157 probes for self intersections...ok!\n",
+      " <<INFO>> Surface build-up time.. 0 [s]\n",
+      " <<INFO>> Probe Radius value 1.4\n",
+      " <<INFO>> Number of ses cells -> 2571\n",
+      " <<INFO>> Number of del_point cells -> 403\n",
+      " <<INFO>> Number of regular del_edge cells -> 1262\n",
+      " <<INFO>> Number of singular del_edge cells -> 0\n",
+      " <<INFO>> Number of regular del_facet cells -> 816\n",
+      " <<INFO>> Number of singular del_facet cells -> 45\n",
+      " <<INFO>> Use load balancing: 1\n",
+      " <<INFO>> Detected 48 logical cores\n",
+      " <<INFO>> Setting 48 threads\n",
+      " <<INFO>> Inside id value is 5\n",
+      " <<INFO>> Ray-tracing panel 0...ok!\n",
+      " <<INFO>> Ray-tracing panel 1...ok!\n",
+      " <<INFO>> Ray-tracing panel 2...ok!\n",
+      " <<INFO>> Ray-tracing computation time.. 0 [s]\n",
+      " <<INFO>> Approximated 0 rays (0.00000 %)\n",
+      " <<INFO>> Cavity detection time is 0 [s]\n",
+      " <<INFO>> Assembling octrees..ok!\n",
+      " <<INFO>> Surface computation time.. 0 [s]\n",
+      " <<INFO>> Estimated volume 7593.22 [A^3]\n",
+      " <<INFO>> Triangulating Surface...\n",
+      " <<INFO>> Setting 48 threads\n",
+      " <<INFO>> Generating MC vertices...ok!\n",
+      " <<INFO>> MC added 0 non analytical vertices\n",
+      " <<INFO>> Triangles done\n",
+      " <<INFO>> MC time is 0 [s]\n",
+      " <<INFO>> Total, grid conformant, surface area is 3008.17 [A^2]\n",
+      " <<INFO>> Number of vertices 19826 number of triangles 39648\n",
+      " <<INFO>> Saving in MSMS format, no patch info, no nearest atom..\n",
+      " <<INFO>> Smoothing surface...\n",
+      " <<INFO>> Saving in MSMS format, no patch info, no nearest atom..ok!\n",
+      " <<INFO>> Total Triangulation time 1 [s]\n",
+      "\n",
+      " <<INFO>> If you use NanoShaper please cite these works:\n",
+      " <<CITATION>> \tS. Decherchi, W. Rocchia, \"A general and Robust Ray-Casting-Based Algorithm for Triangulating Surfaces at the Nanoscale\"; PlosOne\n",
+      " <<CITATION>> \tlink: http://www.plosone.org/article/metrics/info%3Adoi%2F10.1371%2Fjournal.pone.0059744\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "mol_object = pbj.Solute(xppbe.Molecules.arg_pqr, mesh_density=4.0, mesh_generator='msms', save_mesh_build_files=False)\n",
+    "mol_object = pbj.Solute(xppbe.Molecules.pgb_pqr, mesh_density=7.0, mesh_generator='nanoshaper', save_mesh_build_files=False)\n",
     "simulation = pbj.Simulation()\n",
     "simulation.add_solute(mol_object)\n",
     "\n",
@@ -86,13 +103,23 @@
      "output_type": "stream",
      "text": [
       "/home/martinachondo/miniconda3/envs/pbj/lib/python3.9/site-packages/pyopencl/__init__.py:270: CompilerWarning: Non-empty compiler output encountered. Set the environment variable PYOPENCL_COMPILER_OUTPUT=1 to see more.\n",
-      "  warn(\"Non-empty compiler output encountered. Set the \"\n"
+      "  warn(\"Non-empty compiler output encountered. Set the \"\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n",
+      "66 warnings generated.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-133.75254220825033"
+       "-481.5671167860929"
       ]
      },
      "execution_count": 9,
